Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59222

[macOS] Typing diacritical mark fails when changing to other window

    XMLWordPrintable

Details

    • macOS
    • 52bda430af2749da1a0467b71d9cca5208f22402

    Description

      When entering a diacritical mark (e.g. Option+E) and changing focus to another window the original textedit widget is left in bad input mode.

      Steps to reproduce the issue:
      1. Switch macOS keyboard layout to US
      2. Run attached test application
      3. Press Option+E
      4. Press CMD+E
      5. Press e

      Expected outcome:
      New window is opened and the ´ mark typed in the original window is handled sensibly

      Actual outcome:
      New window is opened and the ´ mark is left in the original window. é is typed in the newly opened window. ´ can't be cleared in the original window. If 'e' isn't typed to the new window the original window can't be focused.

      Attachments

        For Gerrit Dashboard: QTBUG-59222
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change